# LinearProg.FRONTEND

./: .gitignore  Cargo.toml  Trunk.toml
src/: main.rs  router.rs
src/api_functions/: log_in.rs  mod.rs
src/components/: mod.rs
src/components/atoms/: autosize_text_area.rs  mod.rs
src/components/molecules/: horizontal_adjustable_div.rs  mod.rs
src/components/organelles/: mod.rs
src/components/organelles/program_specification/: mod.rs
src/components/organelles/program_specification/code/: mod.rs
src/components/organelles/program_specification/gpt/: mod.rs
src/components/organelles/program_specification/table/: mod.rs  row.rs  structure.rs
src/components/pages/: about.rs  home.rs  mod.rs  not_found.rs  program.rs
