[package]
name = "linearprog_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
yew-router = { version = "0.17.0" }
reqwasm = { version = "0.5.0" }
gloo = { version = "0.8.0" }
stylist = { version = "0.12.0", features = ["yew"] }
wasm-bindgen-futures = { version = "0.4.36" }
console_error_panic_hook = { version = "0.1.7" }
web-sys = { version = "0.3.63" }
wasm-bindgen = { version = "0.2.86" }
